[package]
name = "weldrs"
version = "0.1.0"
edition = "2024"
description = "A Rust implementation of Splink-style probabilistic record linkage"
license = "MIT"
repository = "https://github.com/weldrs-org/weldrs"
authors = ["Paul Stey"]
readme = "README.md"
keywords = ["record-linkage", "data-matching", "deduplication", "probabilistic", "splink"]
categories = ["algorithms", "science"]

[lib]
name = "weldrs"
path = "src/lib.rs"

[features]
simd = ["triple_accel"]

[dependencies]
polars = { version = "0.46", features = [
    "lazy",
    "cross_join",
    "round_series",
    "log",
    "dtype-u8",
    "dtype-i8",
    "dtype-i16",
    "dtype-struct",
    "random",
    "concat_str",
    "semi_anti_join",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
strsim = "0.11"
rayon = "1.11"
rand = "0.8"
triple_accel = { version = "0.4", optional = true }

[dev-dependencies]
polars = { version = "0.46", features = ["csv"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "string_distance"
harness = false

[[bench]]
name = "em_training"
harness = false

[[bench]]
name = "pipeline"
harness = false
