[package]
name = "weldrs"
version = "0.1.4"
edition = "2024"
description = "A Rust implementation of Splink- or fastLink-style probabilistic record linkage"
license = "MIT"
repository = "https://github.com/weldrs-org/weldrs"
authors = ["Paul Stey"]
readme = "README.md"
keywords = ["record-linkage", "entity-resolution", "fastlink", "deduplication", "splink"]
categories = ["algorithms", "science"]

[lib]
name = "weldrs"
path = "src/lib.rs"

[features]
simd = ["triple_accel"]
visualize = ["plotters"]

[dependencies]
polars = { version = "0.53", features = [
    "lazy",
    "cross_join",
    "round_series",
    "log",
    "dtype-u8",
    "dtype-i8",
    "dtype-i16",
    "dtype-struct",
    "random",
    "concat_str",
    "semi_anti_join",
] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
strsim = "0.11"
rayon = "1.11"
rand = "0.8"
rustc-hash = "2"
triple_accel = { version = "0.4", optional = true }
plotters = { version = "0.3", optional = true, default-features = false, features = ["svg_backend", "line_series"] }

[dev-dependencies]
polars = { version = "0.53", features = ["csv"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "string_distance"
harness = false

[[bench]]
name = "em_training"
harness = false

[[bench]]
name = "pipeline"
harness = false

[[bench]]
name = "comparison_vectors"
harness = false

[[bench]]
name = "predict_bench"
harness = false

[[example]]
name = "visualize_charts"
required-features = ["visualize"]
